Fixed the alignment of the images and descriptions on the homepage.

--- a/application/public/css/home.css
+++ b/application/public/css/home.css
@@ -284,11 +284,12 @@ laid on. Image Posts will function for displaying the grid for photos.*/
   padding-bottom: .35em;
   gap: .2rem .2rem;
   grid-template-rows: 1fr 1fr;
-  grid-template-columns: 200px 200px 200px 200px;
   grid-auto-rows: 1fr;
-  grid-auto-columns: 1fr 1fr 1fr 1fr;
   justify-content: center;
-  margin: 0px 95px;
+  margin: 20px 95px 20px 95px;
+  grid-template-columns: 200px 200px 200px 200px; 
+  grid-auto-columns: 1fr 1fr 1fr 1fr;
+
 }
 
 @media screen and (max-width: 950px){
@@ -321,13 +322,17 @@ laid on. Image Posts will function for displaying the grid for photos.*/
   min-width: 200px;
   min-height: 400px;
   margin: auto;
+  justify-content: space-around;
+  align-content: space-between;
+  align-items: center;
+  justify-items: center;
 }
 
 .HomepagePhotos-image {
-  grid-area: 1 / 1 / 2 / 2;
-  display: inline-block;
+  grid-area: 2 / 1 / -4 / 1;
   background-position: 0px;
-  height: auto;
+   /*display: inline-block; commenting this out to fix layout of Homepage Photos*/
+  /*height: auto; commenting this out to fix layout of Homepage Photos*/
 }
 
 div[class=HomepagePhotos] > img {
@@ -337,6 +342,7 @@ div[class=HomepagePhotos] > img {
   max-height: 150px;
   filter: drop-shadow(0 0 0.2rem rgb(0, 0, 0));
   margin: auto;
+  display: block;
 }
 
 .HomepagePhotos-title {
@@ -352,9 +358,10 @@ div[class=HomepagePhotos] > img {
   padding: .75rem;
   background-color: white;
   border-radius: 0 0 .2rem .2rem;
-  margin: auto;
   min-width: 150px;
   max-width: 200px; /*change to 200px if it doesn't work out.*/
+
+  /*margin: auto; commenting this out to fix layout of Homepage Photos*/
 }
 
 div[class=HomepagePhotos-body] > a[class=HomepagePhotos-postdetails] {
